--- a/frontend/styles/groups.css
+++ b/frontend/styles/groups.css
@@ -124,4 +124,36 @@
 
 .switch-buttons {
     display: flex;
+    justify-content: space-between;
+    padding: 15px 30px
+}
+
+.switch-buttons a{
+      width: 45%;
+  padding: 10px 20px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: var(--text-primary);
+  border-radius: 8px;
+  font-size: 1.05em;
+  text-decoration: none;
+  position: relative;
+  border: 1px solid var(--border-color);
+}
+
+.switch-buttons a.active::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color);
+  border-radius: 8px;
+}
+
+.switch-buttons a:hover {
+  background-color: var(--border-color);
 }
