--- a/frontend/styles/groups.css
+++ b/frontend/styles/groups.css
@@ -26,12 +26,16 @@
 .groupPage {
     display: flex;
     gap: 50px;
+    height: 100vh;
 }
 
 .groupPage .left-side {
     background-color: var(--card-bg);
-    flex: 1.2;
+    flex: 1.5;
     border-radius: 8px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .groupPage .right-side {
@@ -99,9 +103,12 @@
 .joinedGroups {
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
 }
 
-.joinedGroups li a{
+.joinedGroups li a {
     padding: 15px 30px;
     display: flex;
     align-items: center;
@@ -115,7 +122,7 @@
     cursor: pointer;
 }
 
-.joinedGroups li svg{
+.joinedGroups li svg {
     font-size: 2.2em;
     background-color: var(--bg-color);
     padding: 8px;
@@ -128,32 +135,32 @@
     padding: 15px 30px
 }
 
-.switch-buttons a{
-      width: 45%;
-  padding: 10px 20px;
-  text-align: center;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  color: var(--text-primary);
-  border-radius: 8px;
-  font-size: 1.05em;
-  text-decoration: none;
-  position: relative;
-  border: 1px solid var(--border-color);
+.switch-buttons a {
+    width: 45%;
+    padding: 10px 20px;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: var(--text-primary);
+    border-radius: 8px;
+    font-size: 1.05em;
+    text-decoration: none;
+    position: relative;
+    border: 1px solid var(--border-color);
 }
 
 .switch-buttons a.active::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: var(--accent-color);
-  border-radius: 8px;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--accent-color);
+    border-radius: 8px;
 }
 
 .switch-buttons a:hover {
-  background-color: var(--border-color);
+    background-color: var(--border-color);
 }
