--- a/frontend/styles/post.css
+++ b/frontend/styles/post.css
@@ -193,7 +193,6 @@
   margin-bottom: 2rem;
   box-shadow: 0 4px 10px var(--shadow-color);
   color: var(--text-primary);
-  max-width: 600px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -219,7 +218,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
   border: 2px solid var(--accent-color);
 }
 
