--- a/frontend/styles/groups.css
+++ b/frontend/styles/groups.css
@@ -106,6 +106,7 @@
     overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
+    height: 100%;
 }
 
 .joinedGroups li a {
