--- a/frontend/styles/groups.css
+++ b/frontend/styles/groups.css
@@ -168,7 +168,7 @@
     background-color: var(--border-color);
 }
 
-.suggestedGroupsReq{
+.exploreGroups{
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -178,10 +178,10 @@
     color: var(--text-secondary);
 }
 
-.suggestedGroupsReq svg{
+.exploreGroups svg{
     font-size: 6.5em;
 }
 
-.suggestedGroupsReq p{
+.exploreGroups p{
     font-size: 0.9em;
 }
