--- a/frontend/styles/chat.css
+++ b/frontend/styles/chat.css
@@ -1,4 +1,3 @@
-
 .chatPage {
   display: flex;
   height: 100vh;
@@ -199,12 +198,12 @@
   justify-content: end;
 }
 
-.chatBody > div {
+.chatBody>div {
   padding: 10px 20px;
   border-radius: 8px;
 }
 
-.chatBody .msg{
+.chatBody .msg {
   padding: 10px 20px;
   border-radius: 8px;
   display: flex;
@@ -212,7 +211,7 @@
   gap: 5px;
 }
 
-.chatBody .msg span{
+.chatBody .msg span {
   font-size: 0.6em;
   width: 100%;
   color: var(--text-secondary);
@@ -251,7 +250,7 @@
   color: var(--text-secondary);
 }
 
-.chatBody .showScrollButton{
+.chatBody .showScrollButton {
   position: sticky;
   left: 0;
   bottom: 0;
@@ -264,11 +263,20 @@
   z-index: 99;
 }
 
-.chatBody .showScrollButton svg{
+.chatBody .showScrollButton svg {
   color: var(--accent-color);
   transition: .3s;
 }
 
-.chatBody .showScrollButton svg:hover{
+.chatBody .showScrollButton svg:hover {
   scale: 1.2;
+}
+
+.friends-list li a {
+  color: var(--text-primary);
+  align-items: center;
+  gap: 15px;
+  padding: 8px;
+  text-decoration: none;
+  display: flex;
 }
