Add search styles and integrate search.css into globals.css

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -11,6 +11,7 @@
 @import url("../styles/request.css");
 @import url("../styles/groups.css");
 @import url("../styles/events.css");
+@import url("../styles/search.css");
 
 :root {
   --bg-color: #12111a;
