Enhance navigation layout and improve author display in PostHeader component

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -107,6 +107,16 @@ svg {
   color: var(--icon-color);
   flex-shrink: 0;
 }
+nav > div {
+    gap: 15px;
+    display: flex;
+
+    width: 46%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 
 @keyframes popupFade {
   0% {
