--- a/frontend/styles/post.css
+++ b/frontend/styles/post.css
@@ -142,7 +142,7 @@
   overflow-y: scroll;
 }
 
-.user-checkbox-item > #follower-checkbox-label {
+.user-checkbox-item>#follower-checkbox-label {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -193,7 +193,7 @@
   margin-bottom: 2rem;
   box-shadow: 0 4px 10px var(--shadow-color);
   color: var(--text-primary);
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -233,16 +233,17 @@
   font-size: 1rem;
   line-height: 1.6;
   color: var(--text-secondary);
-   overflow-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .post-card .postImg {
   width: 100%;
-  max-height: 300px;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
   margin-top: 1rem;
   border: 1px solid var(--border-color);
+  aspect-ratio: 16 / 9;
 }
 
 .post-card .post-actions {
@@ -303,6 +304,7 @@
   color: var(--info-color);
   font-size: small;
 }
+
 /* =============== */
 
 .post-card .comments-list {
@@ -455,6 +457,3 @@
 .errors {
   color: red;
 }
-
-
-
