--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -12,6 +12,7 @@
 @import url("../styles/groups.css");
 @import url("../styles/events.css");
 @import url("../styles/search.css");
+@import url("../styles/profileBottom.css");
 
 :root {
   --bg-color: #12111a;
