--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -13,6 +13,7 @@
 @import url("../styles/events.css");
 @import url("../styles/search.css");
 @import url("../styles/profileBottom.css");
+@import url("../styles/notFound.css");
 
 :root {
   --bg-color: #12111a;
