--- a/frontend/styles/header.css
+++ b/frontend/styles/header.css
@@ -109,6 +109,7 @@ nav>div {
   background-color: var(--bg-color);
   width: 50px;
   height: 50px;
+  min-width: 50px;
   border-radius: 50%;
   transition: 0.5s ease-in-out;
   position: relative;
@@ -188,9 +189,11 @@ header nav .header-icon {
 .header-icons {
   display: flex;
   align-items: center;
+  justify-content: end;
   gap: 15px;
   position: relative;
   z-index: 1;
+  width: max-content;
 }
 
 .header-icons > * {
