--- a/frontend/styles/post.css
+++ b/frontend/styles/post.css
@@ -25,9 +25,9 @@
 }
 
 /* ======================================== CREATE POST FORM SECTION ============================*/
-
-.create-post .post-form {
-  background-color: var(--card-bg);
+.create-post{
+  width: 80%;
+  margin: auto;
 }
 
 .create-post .submit-post-btn {
@@ -41,22 +41,24 @@
 .create-post .addPostBtn {
   background-color: var(--bg-color);
   border: none;
-  color: var(--btn-text);
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   cursor: pointer;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  color: var(--text-secondary)
 }
 
 .create-post .addPostIcon {
   color: var(--accent-color);
 }
 
-.create-post .add-post-holder {
-  max-width: 600px;
-  margin: 2rem auto;
-}
-
 .create-post .post-form {
-  max-width: 600px;
+  background-color: var(--card-bg);
+  width: 100%;
   margin: 2rem auto;
   padding: 2rem;
   color: var(--text-primary);
@@ -193,7 +195,7 @@
   margin-bottom: 2rem;
   box-shadow: 0 4px 10px var(--shadow-color);
   color: var(--text-primary);
-  width: 70%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -446,7 +448,7 @@
 
 .no-more-posts {
   background-color: var(--border-color);
-  max-width: 600px;
+  width: 80%;
   margin: 5rem auto;
   text-align: center;
   padding: 2rem 0px;
